# CS1550_Project_4

Project_4/: CMakeLists.txt  READMEs
Project_4/extra/: betterRefresh.csv  betterResults.csv  evenBetterResults.csv  refreshSize.csv  results.csv
Project_4/include/: common.h  fifoAlgorithm.h  nruAlgorithm.h  optAlgorithm.h  secondAlgorithm.h  virtualMemorySimulation.h
Project_4/src/: fifoAlgorithm.cpp  main.cpp  nruAlgorithm.cpp  optAlgorithm.cpp  refreshMath.cpp  results.cpp  secondAlgorithm.cpp  virtualMemorySimulation.cpp
